fix overflow gallery

--- a/style.css
+++ b/style.css
@@ -375,6 +375,7 @@ img {
   color: var(--secondary-color);
   background: var(--primary-color-third);
   padding: 30px 0px;
+  overflow-x: hidden;
 }
 
 .gallery .grid-gallery {
@@ -388,15 +389,15 @@ img {
   transition: 0.5s ease-in-out;
   cursor: pointer;
   /* before show class */
-  /* transform: translate(0, 100px); */
+
   visibility: hidden;
   opacity: 0;
 }
 .gallery .grid-gallery > *:nth-child(odd) {
-  transform: translate(-100px, 0);
+  transform: translate(-80px, 0);
 }
 .gallery .grid-gallery > *:nth-child(even) {
-  transform: translate(100px, 0);
+  transform: translate(80px, 0);
 }
 
 .gallery .grid-gallery > *:hover {
